--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-/* Aquí están los estilos CSS */
-
 * {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
@@ -11,13 +9,26 @@
 
 body {
   color: #fff;
-  background-color: black;
+  background-color: rgb(11, 11, 11);
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(42, 42, 42);
+  border-radius: 10px;
 }
 
 .background-image {
   position: relative;
   width: 100%; 
-  height: 1000px;
+  height: 1130px;
   max-height: 100vh;
   object-fit: cover;
 }
@@ -32,51 +43,41 @@ body {
   z-index: -1;
 }
 
-.title {
+.main {
   position: absolute;
-  top: 40%;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
-  color: white;
-  font-size: 36px;
   text-align: center;
+}
+
+.main h1 {
+  color: white;
+  font-size: 46px;
   z-index: 1;
   font-weight: 800;
 }
 
-.button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+.main button {
+  margin-top: 20px;
   z-index: 1;
   background: rgb(11, 11, 11);
   border: 0px;
   padding: 15px 40px 15px 40px;
   border-radius: 24px;
+  transition: background 1.3s ease;
 }
 
-.button a {
+.main button:hover {
+  background: linear-gradient(to right, rgb(245, 2, 245), rgb(35, 60, 223));
+  cursor: pointer;
+}
+
+.main a {
   font-weight: 600;
   font-size: 24px;
   color: white;
   text-decoration: none;
-}
-
-.button a::before {
-  content: '';
-  position: absolute;
-  top: 70%;
-  left: 25%;
-  width: 0;
-  height: 2px;
-  background: #fff;
-  transition: .3s;
-}
-
-.button a:hover::before {
-  width: 50%;
 }
 
 .feature {
@@ -96,15 +97,18 @@ body {
   font-weight: 400;
 }
 
-.feature img {
-  margin-top: 60px; 
+/*.feature img {
+  position: relative;
+  margin-top: 60px;
   box-shadow: 0 0 40px rgba(80, 80, 80, 0.5);
   max-height: 408px;
   max-width: 778px;
+  min-height: 8px;
+  min-width: 328px;
   height: 100%;
   width: 100%;
   border-radius: 24px;
-}
+}*/
 
 .header {
   position: fixed;
