--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body {
 
 .background-image {
   position: relative;
-  width: 100%; 
+  width: 100%;
   height: 1130px;
   max-height: 100vh;
   object-fit: cover;
@@ -43,6 +43,14 @@ body {
   z-index: -1;
 }
 
+.support {
+  position: absolute;
+  left: 50%;
+  top: 235%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 .main {
   position: absolute;
   left: 50%;
@@ -51,25 +59,33 @@ body {
   text-align: center;
 }
 
+.main img {
+  position: absolute;
+  height: 250px;
+  width: 250px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 500px;
+}
+
 .main h1 {
-  color: white;
+  color: rgb(11, 11, 11);
   font-size: 46px;
   z-index: 1;
   font-weight: 800;
 }
 
 .main button {
-  margin-top: 20px;
+  margin-top: 160px;
   z-index: 1;
   background: rgb(11, 11, 11);
   border: 0px;
   padding: 15px 40px 15px 40px;
   border-radius: 24px;
-  transition: background 1.3s ease;
 }
 
 .main button:hover {
-  background: linear-gradient(to right, rgb(245, 2, 245), rgb(35, 60, 223));
+  background: rgb(42, 42, 42);
   cursor: pointer;
 }
 
@@ -80,20 +96,41 @@ body {
   text-decoration: none;
 }
 
-.feature {
+.feature-l {
   position: relative;
-  text-align: center;
+  text-align: left;
+  margin-left: 150px;
+  margin-top: 10px;
   padding: 100px;
 }
 
-.feature h1 {
-  font-size:  34px;
-  font-weight: 600;
+.feature-l h1 {
+  font-size: 48px;
+  font-weight: 700;
 }
 
-.feature p {
-  font-size:  18px;
-  margin-top: 10px; 
+.feature-l p {
+  font-size: 18px;
+  margin-top: 10px;
+  font-weight: 400;
+}
+
+.feature-r {
+  position: relative;
+  text-align: right;
+  margin-right: 150px;
+  margin-top: 10px;
+  padding: 100px;
+}
+
+.feature-r h1 {
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.feature-r p {
+  font-size: 18px;
+  margin-top: 10px;
   font-weight: 400;
 }
 
@@ -109,6 +146,29 @@ body {
   width: 100%;
   border-radius: 24px;
 }*/
+
+.footer  {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 50px 70px;
+  background: rgb(11, 11, 11);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+}
+
+.footer h1 {
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.footer p {
+  font-size: 14px;
+  font-weight: 400;
+}
 
 .header {
   position: fixed;
@@ -156,21 +216,13 @@ body {
   height: 2px;
   background: #fff;
   transition: .3s;
+}.support {
+  position: absolute;
+  left: 50%;
+  top: 235%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
-
-.navbar a:hover::before {
-  width: 100%;
-}
-
-.hamburger-menu {
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 20px;
-  cursor: pointer;
-}
-
 .line {
   width: 100%;
   height: 4px;
@@ -181,6 +233,42 @@ body {
 
 @media only screen and (max-width: 768px) {
 
+  .support {
+    top: 275%;
+  }
+
+  .footer  {
+    display: block;
+  }
+
+  .footer p {
+    margin-top: 10px;
+  }
+
+  .feature-l {
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin-left: 0;
+  }
+
+  .feature-l h1 {
+    font-size: 30px;
+  }
+
+  .feature-r {
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin-right: 0;
+  }
+
+  .feature-r h1 {
+    font-size: 30px;
+  }
+
   .button {
     top: 58%;
   }
@@ -190,6 +278,10 @@ body {
   }
 
   .logo {
+    font-size: 24px;
+  }
+
+  .feature h1 {
     font-size: 24px;
   }
 
